# Agent-Ladder

./: .env.example  .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  qwen3-max.step-0.json
src/agent_ladder/benchmarks/swebench/: dataset.py  evaluate.py  oracle.py  repo.py  swebench_lite_30.json
src/agent_ladder/benchmarks/swebench/step_0/: predictions.jsonl  run.py
src/agent_ladder/scripts/: select_subset.py
src/agent_ladder/shared/: llm.py  tui.py
src/agent_ladder/steps/step_0_bare_chat/: README.md  chat.py  run.py
src/agent_ladder/steps/step_1_bash/: README.md
src/agent_ladder/steps/step_1_bash/claude_code/: README.md  run.py
src/agent_ladder/steps/step_1_bash/claude_code/tool/: __init__.py  handler.py  schema.py  (+1 more)
src/agent_ladder/steps/step_1_bash/codex/: README.md  run.py
src/agent_ladder/steps/step_1_bash/hermes_agent/: README.md  run.py
src/agent_ladder/steps/step_1_bash/kimi/: README.md  run.py
src/agent_ladder/steps/step_1_bash/minicode/: README.md  run.py
src/agent_ladder/steps/step_1_bash/opencode/: README.md  run.py
src/agent_ladder/steps/step_1_bash/pi_mono/: README.md  run.py
src/agent_ladder/steps/step_1_bash/qwen_code/: README.md  run.py
src/agent_ladder/steps/step_1_bash/trae_agent/: README.md  run.py
tests/: test_layout_imports.py  test_llm.py  test_step_1_bash_claude_code.py  test_step_1_bash_codex.py  test_step_1_bash_hermes_agent.py  test_step_1_bash_kimi.py  test_step_1_bash_minicode.py  test_step_1_bash_opencode.py  test_step_1_bash_pi_mono.py  test_step_1_bash_qwen_code.py  test_step_1_bash_trae_agent.py
(+39 files in other folders)
