[project]
name = "agent-ladder"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "litellm>=1.93.0",
    "python-dotenv>=1.2.2",
    "textual>=8.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_ladder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: hits the real gateway (network, costs money); excluded by default",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "datasets>=5.0.0",
    "pytest>=8.0.0",
    "swebench>=4.1.0",
]
